--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,10 @@ body {
     font-size: 16px;
     background-color: #000;
   }
+
+  div[data-nextjs-scroll-focus-boundary] {
+    height: 100%;
+  }
   
   .container {
     display: grid;
